Fix not showing time column in laundry calendar

--- a/src/components/clientpage/clientcomplaint/clientcomplaint.css
+++ b/src/components/clientpage/clientcomplaint/clientcomplaint.css
@@ -2,7 +2,7 @@
   padding: 20px;
   background-color: #fff;
   width: 100%;
-  margin: 0 auto; 
+  margin: 20px auto; 
   box-sizing: border-box;
 }
 
